Criado teste de integração para PedidoRest.