@@ -461,4 +461,58 @@
 			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>integration-tests</id>
+			<activation>
+				<property>
+					<name>!skipTests</name>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.tomcat.maven</groupId>
+						<artifactId>tomcat7-maven-plugin</artifactId>
+						<version>2.0-beta-1</version>
+						<executions>
+							<execution>
+								<id>tomcat-run</id>
+								<goals>
+									<goal>run-war-only</goal>
+								</goals>
+								<phase>pre-integration-test</phase>
+								<configuration>
+									<fork>true</fork>
+									<port>9090</port>
+									<path>/</path>
+									<systemProperties>
+										<spring.profiles.active>teste</spring.profiles.active>
+										<JAVA_OPTS>-server -Xms384m -Xmx512m -XX:MaxPermSize=128m -Djava.awt.headless=true</JAVA_OPTS>
+									</systemProperties>
+								</configuration>
+							</execution>
+							<execution>
+								<id>tomcat-shutdown</id>
+								<goals>
+									<goal>shutdown</goal>
+								</goals>
+								<phase>post-integration-test</phase>
+								<configuration>
+									<port>9090</port>
+								</configuration>
+							</execution>
+						</executions>
+						<dependencies>
+							<dependency>
+								<groupId>com.h2database</groupId>
+								<artifactId>h2</artifactId>
+								<version>1.3.164</version>
+							</dependency>
+						</dependencies>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
